@@ -40,6 +40,8 @@ Version 1.5
   * Bro (PR#5)
   * NewLISP (PR#26)
 
+- Fix Python 3 terminal highlighting with pygmentize (#691).
+
 - In the LaTeX formatter, escape special &, < and > chars (#648).
 
 - In the LaTeX formatter, fix display problems for styles with token
